--- a/src/blog.njk
+++ b/src/blog.njk
@@ -14,3 +14,12 @@ order: 3
         </li>
     {% endfor %}
 </ul>
+
+<ul class='blog-list'>
+    {% for post in collections.post %}
+        <li class="blog-list-item">
+            <a class="blog-list-link" href="{{ post.url }}">{{ post.data.title }}</a>
+            <small class="blog-list-date">{{post.date | postDate}}</small>
+        </li>
+    {% endfor %}
+<ul>
