--- a/src/index.njk
+++ b/src/index.njk
@@ -18,3 +18,15 @@ I am a site built with <a href="https://www.11ty.io/">Eleventy</a>
 This site is my effort to understand Eleventy. I am doing so by guiding others.
 
 Together, we will Learn Eleventy.
+
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", (user) => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
