--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    #post {
+        margin-top: 2rem;
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+  }
