--- a/src/index.njk
+++ b/src/index.njk
@@ -5,15 +5,12 @@ tags: page
 order: 1
 ---
 
-{% headers "Home", "Learning SSG"%}
 
-<img src="/assets/images/learn.png" alt="">
 
-<!-- Shortcode in use -->
 
 <br>
 
-I am a site built with <a href="https://www.11ty.io/">Eleventy</a>
+I am a sitessss built with <a href="https://www.11ty.io/">Eleventy</a>
 
 This site is my effort to understand Eleventy. I am doing so by guiding others.
 
