--- a/src/index.njk
+++ b/src/index.njk
@@ -5,16 +5,7 @@ tags: page
 order: 1
 ---
 
-
-
-
-<br>
-
-I am a sitessss built with <a href="https://www.11ty.io/">Eleventy</a>
-
-This site is my effort to understand Eleventy. I am doing so by guiding others.
-
-Together, we will Learn Eleventy.
+„Christus zu erkennen bedeutet, seine Wohltaten zu erkennen.“
 
 <script>
   if (window.netlifyIdentity) {
