--- a/src/_includes/partials/_navigation.njk
+++ b/src/_includes/partials/_navigation.njk
@@ -1,11 +1,11 @@
-<header class="bg-gray-400 sticky top-0">
+<header class="bg-white sticky font-bold px-6 py-6 top-0">
     <nav class="">
         {% for item in collections.page %}
         <a href="{{ item.url }}"
         {% if item.url == page.url %}
             aria-current='page' data-state='active'
         {% endif %}
-        class="hover:text-sky-400 text-xl"
+        class="hover:text-red-400 text-xl pr-4"
         >{{ item.data.title }}</a>
         {% endfor %}
     </nav>
