--- a/src/_layouts/postLayout.njk
+++ b/src/_layouts/postLayout.njk
@@ -1,9 +1,6 @@
 ---
 layout: base
 ---
-<div id="post" class="prose"> 
+<div id="post" class="pt-0 mt-0 prose"> 
  {{ content | safe }}
-
- dssdss
-dssssss
 </div>
