--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -4,13 +4,11 @@
 
 @layer base {
     #post {
-        font-size: 1.5rem;
-        line-height: 2rem;
     }
     .footnote-ref {
         @apply text-2xl;
     }
-    .bold {
+    blockquote p strong {
         margin: 0 -0.4em;
         padding: 0.1em 0.4em;
         border-radius: 0.8em 0.3em;
