--- a/src/_includes/partials/_navigation.njk
+++ b/src/_includes/partials/_navigation.njk
@@ -1,11 +1,11 @@
-<header class="bg-white sticky font-bold px-6 py-6 top-0">
-    <nav class="">
+<header class="bg-white sticky px-6 py-6 top-0">
+    <nav class="text-2xl">
         {% for item in collections.page %}
         <a href="{{ item.url }}"
         {% if item.url == page.url %}
             aria-current='page' data-state='active'
         {% endif %}
-        class="hover:text-red-400 text-xl pr-4"
+        class="hover:text-red-400 pr-3"
         >{{ item.data.title }}</a>
         {% endfor %}
     </nav>
